--- a/suit/static/suit/less/ui/form.less
+++ b/suit/static/suit/less/ui/form.less
@@ -370,6 +370,7 @@ h3 {
 .datetimeshortcuts {
     font-size: 11px;
     margin-left: 5px;
+    vertical-align: middle;
     a:first-child {
         margin-right: 4px;
     }
@@ -406,7 +407,7 @@ h3 {
         }
     }
     input {
-        vertical-align: top;
+        vertical-align: middle;
         &.vDateField {
             width: @date-input-width;
         }
